Goodbye optimizelegibility, fixes #125

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -71,3 +71,6 @@
   .buttonBackgroundOverrides(@btnInverseBackground);
 }
 
+h1, h2, h3, h4, h5, h6 {
+  text-rendering: auto;
+}
